fix visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,7 @@ img {
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
+    visibility: hidden;
 }
 
 .backdrop {
@@ -245,7 +246,7 @@ img {
     width: 100%;
     height: 100%;
     opacity: 1;
-    transition: opacity var(--duration) var(--timing-function);
+    transition: opacity var(--duration) var(--timing-function), visibility var(--duration) var(--timing-function);
 }
 
 .backdrop.is-hidden .modal {
